--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,10 @@ name = "floatconv"
 version = "0.1.0"
 authors = ["Mara Bos <m-ou.se@m-ou.se>"]
 edition = "2018"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "benchmark"
+harness = false
