--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 floatconv = { path = ".." }
 criterion = "0.3"
+compiler_builtins = "0.1.32"
 
 [[bench]]
 name = "benchmark"
